--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,32 @@
 :root {
   /* --fonts-- */
---main-font:'Roboto', sans-serif;
---second-font: 'Raleway', sans-serif;
+  --main-font: 'Roboto', sans-serif;
+  --second-font: 'Raleway', sans-serif;
 
   /* --text colors-- */
---accent-cl: #212121;
---main-text-cl: #FFFFFF;
---second-text-cl: #2196F3;
---email-phone-cl: #757575;
---btn-text-color: #F5F4FA;
---icon-footer-cl: #FFFFFF;
+  --accent-cl: #212121;
+  --main-text-cl: #FFFFFF;
+  --second-text-cl: #2196F3;
+  --email-phone-cl: #757575;
+  --btn-text-color: #F5F4FA;
+  --icon-footer-cl: #FFFFFF;
 
-  /* --bacground color-- s*/
---main-color:#FFFFFF;
---second-color: #F5F4FA;
---third-color: #2F303A;
---section-color: #E5E5E5;
---btn-color: #2196F3;
---btn-bg-color: #188CE8;
---border-color: #EEEEEE;
---border-header-col: #ECECEC;
---icon-color: #AFB1B8;
+  /* --bacground color--*/
+  --main-color: #FFFFFF;
+  --second-color: #F5F4FA;
+  --third-color: #2F303A;
+  --section-color: #E5E5E5;
+  --btn-color: #2196F3;
+  --btn-bg-color: #188CE8;
+  --border-color: #EEEEEE;
+  --border-header-col: #ECECEC;
+  --icon-color: #AFB1B8;
+  --psevdo-color: #2196F3;
+  /* --other--*/
+  --animac: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* --File Index.html-- */
+/* --File Index.html--*/
 
 
 body {
@@ -76,7 +79,7 @@ img {
 }
 
 .section {
-   /*outline: 1px solid green;*/
+  /*outline: 1px solid green;*/
 
   padding-top: 94px;
   padding-bottom: 94px;
@@ -84,7 +87,7 @@ img {
 
 .container {
 
-   /*outline: 1px solid red; */
+  /*outline: 1px solid red; */
 
   width: 1200px;
   padding-left: 15px;
@@ -105,9 +108,9 @@ img {
   align-items: center;
 }
 
-  .logo-left {
+.logo-left {
   margin-right: 93px;
-  
+
   color: var(--second-text-cl);
 
   font-family: var(--second-font);
@@ -123,7 +126,7 @@ img {
 }
 
 .logo-right-foot {
-color: var(--main-text-cl);
+  color: var(--main-text-cl);
 }
 
 .navigation-list {
@@ -132,7 +135,7 @@ color: var(--main-text-cl);
 }
 
 .navigation-item {
-margin-right: 50px;
+  margin-right: 50px;
 }
 
 .navigation-item:last-child {
@@ -140,11 +143,14 @@ margin-right: 50px;
 }
 
 .nav-link {
+  position: relative;
+
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
 
   color: var(--accent-cl);
+  transition: var(--animac);
 
   font-weight: 500;
   font-size: 14px;
@@ -155,6 +161,21 @@ margin-right: 50px;
 .nav-link:hover,
 .nav-link:focus {
   color: var(--second-text-cl);
+}
+
+.psevdo::after {
+  content: '';
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  position: absolute;
+
+  left: 0;
+  bottom: -1px;
+  border-radius: 2px;
+
+  background-color: var(--psevdo-color);
 }
 
 .header-group {
@@ -172,24 +193,27 @@ margin-right: 50px;
   letter-spacing: 0.02em;
   list-style: none;
 }
- 
-.header-email, .header-phone {
+
+.header-email,
+.header-phone {
   display: flex;
   align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
 
   color: var(--email-phone-cl);
+  transition: var(--animac);
 
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.02em;  
-} 
+  letter-spacing: 0.02em;
+}
 
-.email-icon, .phone-icon {
+.email-icon,
+.phone-icon {
   margin-right: 10px;
-  
+
   fill: currentColor;
 }
 
@@ -198,14 +222,16 @@ margin-right: 50px;
 }
 
 .header-group-item:last-child {
-margin-right: 0;
+  margin-right: 0;
 }
 
-.header-email:hover, .header-email:focus {
-color: var(--second-text-cl);
+.header-email:hover,
+.header-email:focus {
+  color: var(--second-text-cl);
 }
 
-.header-phone:hover, .header-phone:focus {
+.header-phone:hover,
+.header-phone:focus {
   color: var(--second-text-cl);
 }
 
@@ -219,7 +245,6 @@ color: var(--second-text-cl);
   margin-right: auto;
   border: 1px solid #000000;
 
-  /* background-color: var(--third-color); */
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)), url(../images/img-hero/hero-bg.jpg);
   background-size: cover;
@@ -228,6 +253,7 @@ color: var(--second-text-cl);
 
   text-align: center;
 }
+
 .hero-title {
   display: block;
   text-align: center;
@@ -235,7 +261,7 @@ color: var(--second-text-cl);
   margin-right: auto;
   margin-bottom: 30px;
   margin-left: auto;
-  
+
   color: var(--main-text-cl);
 
   font-weight: 900;
@@ -243,7 +269,7 @@ color: var(--second-text-cl);
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
-  text-transform: uppercase;  
+  text-transform: uppercase;
 }
 
 .hero-btn {
@@ -261,6 +287,7 @@ color: var(--second-text-cl);
 
   background-color: var(--btn-color);
   color: var(--main-text-cl);
+  transition: var(--animac);
 
   letter-spacing: 0.06em;
   font-style: normal;
@@ -270,25 +297,26 @@ color: var(--second-text-cl);
   font-size: 16px;
   line-height: 1.88;
   cursor: pointer;
-} 
+}
 
- 
-.hero-btn:hover, .hero-btn:focus {
+
+.hero-btn:hover,
+.hero-btn:focus {
   background-color: var(--btn-bg-color);
   color: var(--btn-text-color);
 }
 
 /* --about section-- */
 
- .about-title {
-   color: var(--accent-cl);
+.about-title {
+  color: var(--accent-cl);
 
-   font-weight: 700;
-   font-size: 36px;
-   line-height: 1.17;
-   text-align: center;
-   letter-spacing: 0.03em;
- }
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
 
 .about-list {
   display: flex;
@@ -333,15 +361,16 @@ color: var(--second-text-cl);
 
   font-size: 14px;
   line-height: 1.71;
-  letter-spacing: 0.03em; 
+  letter-spacing: 0.03em;
 }
-    
- /* --work section-- */
+
+/* --work section-- */
 
 .work {
   padding-top: 0;
 }
- .work-title {
+
+.work-title {
   margin-bottom: 50px;
 
   color: var(--accent-cl);
@@ -354,18 +383,42 @@ color: var(--second-text-cl);
 }
 
 .work-list {
-display: flex;
-align-items: center;
-} 
+  display: flex;
+  align-items: center;
+}
 
 .work-item {
   margin-right: 30px;
+
+  position: relative;
 }
+
 .work-item:last-child {
   margin-right: 0;
 }
 
-    /* --team section-- */
+.work-text {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 70px;
+  bottom: 0;
+  left: 0;
+
+  color: var(--main-text-cl);
+  background: rgba(47, 48, 58, 0.8);
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+/* --team section-- */
 
 .team {
   background-color: var(--second-color);
@@ -392,7 +445,7 @@ align-items: center;
   margin-right: 30px;
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25),
-  0px 4px 4px rgba(0, 0, 0, 0.25), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    0px 4px 4px rgba(0, 0, 0, 0.25), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .team-item:last-child {
@@ -447,6 +500,7 @@ align-items: center;
 
   color: var(--icon-color);
   background-color: var(--main-color);
+  transition: var(--animac);
 
   border-radius: 50%;
 }
@@ -470,14 +524,14 @@ align-items: center;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
-  
+
   color: #212121
 }
 
 .customer-list {
   display: flex;
   justify-content: space-between;
-  
+
 }
 
 .customers-item {
@@ -495,9 +549,11 @@ align-items: center;
   border-radius: 4px;
 
   color: var(--icon-color);
+  transition: var(--animac);
 }
 
-.customers-link:hover, .customers-link:focus {
+.customers-link:hover,
+.customers-link:focus {
   border-color: var(--btn-bg-color);
   color: var(--btn-color);
 }
@@ -505,7 +561,8 @@ align-items: center;
 .customers-icon {
   fill: currentColor;
 }
-    /* --Footer section-- */
+
+/* --Footer section-- */
 
 .footer {
   display: block;
@@ -516,7 +573,7 @@ align-items: center;
 }
 
 .footer-container {
-  display: flex; 
+  display: flex;
   align-items: baseline;
 }
 
@@ -534,6 +591,7 @@ align-items: center;
   margin-bottom: 9px;
 
   color: var(--main-text-cl);
+  transition: var(--animac);
 
   font-weight: 400;
   font-size: 14px;
@@ -553,7 +611,8 @@ align-items: center;
 .address-item {
   display: block;
 
-  color: var(--main-text-cl); 
+  color: var(--main-text-cl);
+  transition: var(--animac);
 
   font-size: 14px;
   line-height: 1.71;
@@ -565,6 +624,7 @@ align-items: center;
   display: block;
 
   color: rgba(255, 255, 255, 0.6);
+  transition: var(--animac);
 
   font-weight: 400;
   font-size: 14px;
@@ -572,7 +632,7 @@ align-items: center;
   letter-spacing: 0.03em;
 }
 
-.address-item:hover, 
+.address-item:hover,
 .address-item:focus {
   color: var(--second-text-cl);
 }
@@ -605,11 +665,11 @@ align-items: center;
 
 .social-footer-list {
   display: flex;
-  
+
 }
 
 .social-footer-item:not(:last-child) {
-   margin-right: 10px;
+  margin-right: 10px;
 }
 
 .social-footer-link {
@@ -621,6 +681,7 @@ align-items: center;
 
   color: var(--icon-footer-cl);
   background-color: rgba(255, 255, 255, 10%);
+  transition: var(--animac);
 
   border-radius: 50%;
 }
@@ -660,8 +721,9 @@ align-items: center;
   padding: 6px 22px;
   border: none;
   border-radius: 4px;
-  
+
   color: var(--accent-cl);
+  transition: var(--animac);
 
   font-family: inherit;
   font-style: normal;
@@ -672,14 +734,16 @@ align-items: center;
   letter-spacing: 0.03em;
   cursor: pointer;
 }
-.btn-filter:hover, .btn-filter:focus {
+
+.btn-filter:hover,
+.btn-filter:focus {
   background-color: var(--btn-color);
   color: var(--main-text-cl);
 
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 
-  0px 1px 2px rgba(0, 0, 0, 0.08), 
-  0px 2px 2px rgba(0, 0, 0, 0.12);
-} 
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+    0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
 
 .services {
   display: flex;
@@ -688,6 +752,7 @@ align-items: center;
 
 .services-item {
   width: 370px;
+  height: 404px;
   margin-right: 30px;
   margin-bottom: 30px;
 }
@@ -698,12 +763,40 @@ align-items: center;
 
 .services-item:nth-last-child(-n+3) {
   margin-bottom: 0;
-} 
+}
 
-.services-item:hover, .services-item:focus {
+.services-item:hover,
+.services-item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-  0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px 
-  rgba(0, 0, 0, 0.16);
+    0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.portfolio-overlay {
+  position: relative;
+  overflow: hidden;
+}
+
+.services-item:hover .portfolio-desc,
+.services-item:focus .portfolio-desc {
+  transform: translateY(-100%);
+  opacity: 1;
+}
+
+.portfolio-desc {
+  position: absolute;
+  padding: 63px 24px;
+  opacity: 0;
+  transform: translateY(0%);
+  transition: transform var(--animac);
+  opacity: 0;
+
+  background: rgba(33, 150, 243, 0.9);
+  color: var(--main-text-cl);
+
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
 }
 
 .portfolio-card {
@@ -721,7 +814,7 @@ align-items: center;
   font-weight: 700;
   font-size: 18px;
   line-height: 2.0;
-  letter-spacing: 0.06em; 
+  letter-spacing: 0.06em;
   vertical-align: top;
 }
 
@@ -730,5 +823,5 @@ align-items: center;
 
   font-size: 16px;
   line-height: 1.88;
-  letter-spacing: 0.03em; 
+  letter-spacing: 0.03em;
 }
