--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@
   --border-header-col: #ECECEC;
   --icon-color: #AFB1B8;
   --psevdo-color: #2196F3;
-  /* --other--*/
+  /* --animation--*/
   --animac: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
